# libsnowflakeid

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: cmake-debug.yml  package-release.yml
inc/: snowflakeid.h
res/: package-description.txt  version.h.template
src/: libsnowflakeid.h  snowflakeid_destroy.c  snowflakeid_get_version_as_int.c  snowflakeid_get_version_as_str.c  snowflakeid_initialize.c  snowflakeid_next_value.c
test/: test_main.c
